--- a/Alpha/AlphaMvc/Content/editable/addrowstyle.css
+++ b/Alpha/AlphaMvc/Content/editable/addrowstyle.css
@@ -598,6 +598,14 @@
     float: left;
     margin-right: 54.5%;
 }
+.form-style .label-small-51 {
+    margin: 0 0 3px 0;
+    padding: 0px;
+    display: block;
+    font-weight: bold;
+    float: left;
+    margin-right: 51.2%;
+}
 .form-style .label-big {
     margin: 0 0 3px 0;
     padding: 0px;
