--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -453,6 +453,12 @@
                                                         <li>
                                                             <input type="text" id="txtProfit" name="field6" class="text-size130 txtdisablerow" disabled />
                                                         </li>
+                                                        <li>
+                                                            <label class="lblProfit label-small-51">กำไร %</label>
+                                                        </li>
+                                                        <li>
+                                                            <input type="text" id="txtProfitPersent" name="field6" class="text-size130 txtdisablerow" disabled />
+                                                        </li>
                                                     </ul>
                                                 </td>
                                             </tr>
