--- a/Alpha/AlphaMvc/Reports/RptBDC.rdlc
+++ b/Alpha/AlphaMvc/Reports/RptBDC.rdlc
@@ -1202,6 +1202,7 @@
                         <PaddingBottom>2pt</PaddingBottom>
                       </Style>
                     </Textbox>
+                    <rd:Selected>true</rd:Selected>
                   </CellContents>
                 </TablixCell>
                 <TablixCell>
