--- a/Alpha/AlphaMvc/Content/custom.css
+++ b/Alpha/AlphaMvc/Content/custom.css
@@ -20,9 +20,13 @@
  */
 
 /*! normalize.css v2.1.0 | MIT License | git.io/normalize */
+.mgr-top10
+{
+    margin-top: 10px !important;
+}
 .mgr10
 {
-    margin-right: 10px;
+    margin-right: 10px !important;
 }
 .tdredColor
 {
