--- a/Alpha/AlphaMvc/Views/AllActivity/AllActivity.cshtml
+++ b/Alpha/AlphaMvc/Views/AllActivity/AllActivity.cshtml
@@ -38,9 +38,46 @@ function GetDetail(currentMonth) {
                var event = [];
                for (var i = 0; i < data.Table.length; i++) {
                    var EWorking = data.Table[i].EWorking.replace('T00:00:00', 'T23:59:00');
-                   var TypeWorking = data.Table[i].TypeWorkingName.substr(0, 1);
+                   //var TypeWorking = data.Table[i].TypeWorkingName.substr(0, 1);
+                   var TypeWorking;
+                   if (data.Table[i].TypeWorking == 1) {
+                       //Torque Bolt
+                       TypeWorking = 'TB';
+                   }
+                   else if (data.Table[i].TypeWorking == 2) {
+                       //Bolt Tension
+                       TypeWorking = 'BT';
+                   }
+                   else if (data.Table[i].TypeWorking == 3) {
+                       //Stop Leak
+                       TypeWorking = 'SL';
+                   }
+                   else if (data.Table[i].TypeWorking == 4) {
+                       //Onsite  Machine
+                       TypeWorking = 'OM';
+                   }
+                   else if (data.Table[i].TypeWorking == 60) {
+                       //Onsite  Machine
+                       TypeWorking = 'SE';
+                   }
+                   else if (data.Table[i].TypeWorking == 62) {
+                       //Onsite  Machine
+                       TypeWorking = 'OH';
+                   }
+                   else if (data.Table[i].TypeWorking == 63) {
+                       //Onsite  Machine
+                       TypeWorking = 'MP';
+                   }
+                   else if (data.Table[i].TypeWorking == 65) {
+                       //Onsite  Machine
+                       TypeWorking = 'MC';
+                   }
+                   else {
+                       //Others, ManJob
+                       TypeWorking = '-';
+                   }
                    event.push({
-                       title: data.Table[i].JobNo + '(' + TypeWorking+')',
+                       title: '(' + TypeWorking+')' + data.Table[i].JobNo,
                        url: '/JobOrder/EditJobOrder?id=' + data.Table[i].ID,
                        start: data.Table[i].SWorking,
                        end: EWorking
