--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -176,6 +176,12 @@
                 <li  style="margin-top: 2px;">
                     <input type="text" id="txtJobSite" name="field1" class="field-divided" placeholder="" />&nbsp;<input type="text" id="txtLocation" name="field1" class="field-divided" placeholder="" />
                 </li>
+                <li style="margin-top: 2px;">
+                    <div class="form-group">
+                        <label class="Checkbox1"><input type="checkbox" id="chkAdd1" class="chkAdd1" value=""> ค่ากะ</label>
+                        <label class="mgr-top10"><input type="checkbox" id="chkAdd2" class="chkAdd2" value=""> ค่าเบี้ยเลี้ยง</label>
+                    </div>
+                </li>
                 <li>
                     <label>หมายเหตุ</label>
                     <textarea name="field5" id="txtRemark" class="field-long field-textarea" style="margin-top: 5px;"></textarea>
@@ -496,8 +502,8 @@
                                                                 <th rowspan="3" class="hidecolumn">Position</th>
                                                                 <th rowspan="3">ชื่อ</th>
                                                                 <th rowspan="3">Lead</th>
-                                                                <th rowspan="3">Tech</th>
-                                                                <th rowspan="3">Safety</th>
+                                                                @*<th rowspan="3">Tech</th>
+                                                                <th rowspan="3">Safety</th>*@
                                                                 <th rowspan="3">Unit Price</th>
                                                                 <th rowspan="3">เลขบัตรประชาชน</th>
                                                                 <th rowspan="3">ประเภทพนักงาน</th>
@@ -541,7 +547,10 @@
                                                                 </td>
                                                                 <td><input type="text" id="txtFName" name="txtFName" class="FName text-size140" />
                                                                 </td>
-                                                                <td class="text-size100">
+                                                                <td>
+                                                                    <select id="cmbManJob" class="cmbManJob" onchange="GetManJob()"></select>
+                                                                </td>
+                                                                @*<td class="text-size100">
                                                                     <input id="chkLead" class="chkLead" type="checkbox" onchange="GetManJob('0')" style="margin-left: 20px; margin-right: 20px;" />
                                                                 </td>
                                                                 <td class="text-size100">
@@ -549,7 +558,7 @@
                                                                 </td>
                                                                 <td class="text-size100">
                                                                     <input id="chkSafety" class="chkSafety" type="checkbox" onchange="GetManJob('2')" style="margin-left: 20px; margin-right: 20px;" />
-                                                                </td>
+                                                                </td>*@
                                                                 <td>
                                                                     <input type="text" id="txtManPrice" class="ManPrice select-size50-height23 txtdisablerow" disabled />
                                                                 </td>
@@ -624,7 +633,10 @@
                                                                 <td>
                                                                     <input type="text" id="txtFName" name="txtFName" class="FName text-size140"/>
                                                                 </td>
-                                                                <td class="text-size100">
+                                                                <td>
+                                                                    <select id="cmbManJob" class="cmbManJob" onchange="GetManJob()"></select>
+                                                                </td>
+                                                                @*<td class="text-size100">
                                                                     <input id="chkLead" class="chkLead" type="checkbox" onchange="GetManJob('0')" style="margin-left: 20px; margin-right: 20px;" />
                                                                 </td>
                                                                 <td class="text-size100">
@@ -632,7 +644,7 @@
                                                                 </td>
                                                                 <td class="text-size100">
                                                                     <input id="chkSafety" class="chkSafety" type="checkbox" onchange="GetManJob('2')" style="margin-left: 20px; margin-right: 20px;" />
-                                                                </td>
+                                                                </td>*@
                                                                 <td>
                                                                     <input type="text" id="txtManPrice" class="ManPrice select-size50-height23 txtdisablerow" disabled />
                                                                 </td>
